@@ -2,104 +2,17 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.streamxhub</groupId>
-        <artifactId>streamx</artifactId>
-        <version>1.0.0</version>
-    </parent>
 
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.streamxhub</groupId>
     <artifactId>streamx-console</artifactId>
+    <version>1.1.0</version>
     <name>StreamX : Console Parent</name>
-    <description>streamx-console</description>
-    <version>1.0.0</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>streamx-console-service</module>
         <module>streamx-console-webapp</module>
     </modules>
-
-    <packaging>pom</packaging>
-
-    <licenses>
-        <license>
-            <name>Apache v2</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>webx</distribution>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <name>benjobs</name>
-            <email>benjobs@qq.com</email>
-            <url>https://github.com/webxhub</url>
-            <roles>
-                <role>Architect</role>
-                <role>Developer</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-    </developers>
-
-    <!-- 定义统一版本号 -->
-    <properties>
-        <!-- Build args -->
-        <argline>
-            -server
-            -Xms256m
-            -Xmx512m
-            -XX:PermSize=64m
-            -XX:MaxPermSize=128m
-            -Dfile.encoding=UTF-8
-            -Djava.net.preferIPv4Stack=true
-        </argline>
-        <arguments/>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                    <optimize>true</optimize>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
-                <configuration>
-                    <argLine>-Dfile.encoding=utf-8</argLine>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
-
 
 </project>
